Fix spacing of icons in repo header buttons (#5620)

--- a/source/features/github-bugs.css
+++ b/source/features/github-bugs.css
@@ -72,3 +72,8 @@
 #partial-discussion-sidebar .js-collab-form .status-indicator .octicon {
 	vertical-align: baseline !important;
 }
+
+/* Fix spacing of repo header button icons #5620 */
+.pagehead-actions :is(.btn, summary) .octicon {
+	margin-right: 4px !important;
+}
